--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -755,18 +755,18 @@ footer {
 /* WHATSAPP FLOAT CSS STARTS */
 
 .float{
-	position:fixed;
-	width:50px;
-	height:50px;
-	bottom:40px;
-	right:20px;
-	background-color:#25d366;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-  	font-size:34px;
+	position: fixed;
+	width: 50px;
+	height: 50px;
+	bottom: 40px;
+	right: 0.5rem;
+	background-color: #25d366;
+	color: #FFF;
+	border-radius: 50px;
+	text-align: center;
+  	font-size: 34px;
 	box-shadow: 2px 2px 3px #999;
-  	z-index:100;
+  	z-index: 100;
 }
 
 .float:hover {
