--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -787,7 +787,7 @@ footer {
 	height: 50px;
 	bottom: 100px;
 	right: 0.5rem;
-	background-color: #25d366;
+	background-color: #0C7DCB;
 	color: #FFF;
 	border-radius: 50px;
 	text-align: center;
