--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,7 +3,7 @@
         margin: 2rem 0 !important;
     }
 
-    .section-two-content {
+    .section-two-content, .section-offer-content {
         margin-top: 1rem;
     }
 
